fixes IE7 overflow bug in project search results

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1123,6 +1123,7 @@ a:hover {
         color:#ffffff;
 	height:43px;
 	border-top:0;
+  position:relative;
         }
 
 #header ul#account-info {
